# QSpinPuzzle

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.md  QSpinPuzzle.pro  README.md  _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_o_n_t_r_i_b_u_t_i_n_g_8md.html  _r_e_a_d_m_e_8md.html  actions_8md.html  advanced_8md.html  annotated.html  assertions_8md.html  class_action_provider.html  class_container_test.html  class_counter.html  class_external_instantiation_test.html  class_field_helper.html  class_instantiation_in_multiple_translation_units_test.html  class_interface.html  class_invoke_helper.html  class_mock.html  class_my_string.html  class_on_the_fly_prime_table.html  class_pre_calculated_prime_table.html  class_prime_table.html  class_private_code.html  class_q_color.html  class_queue.html  class_queue_node.html  class_spin_puzzle_history_widget.html  class_spin_puzzle_widget.html  class_spin_puzzle_window.html  classes.html  classpuzzle_1_1_matrix_operation.html  classpuzzle_1_1_spin_marble.html  classpuzzle_1_1_spin_puzzle_game.html  classpuzzle_1_1_spin_puzzle_side.html  classpuzzle_1_1_spin_puzzle_side_1_1_status.html  (+578 more)
appy/: setup.py
appy/qspyn_puzzle/: __init__.py
resources/: images.qrc
scripts/: compile_win.ps1  coverage.sh  format.sh  qt.sh  test_build.sh  test_compilation.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  (+140 more)
src/: main.cpp
src/puzzle/: spin_action_provider.cpp  spin_action_provider.h  spin_configuration.cpp  spin_configuration.h  spin_game_recorder.cpp  spin_game_recorder.h  spin_marble.cpp  spin_marble.h  spin_metrics.cpp  spin_metrics.h  spin_puzzle_cipher.cpp  spin_puzzle_cipher.h  spin_puzzle_definitions.cpp  spin_puzzle_definitions.h  spin_puzzle_game.cpp  spin_puzzle_game.h  spin_puzzle_matrix.h  spin_puzzle_record.cpp  spin_puzzle_record.h  spin_puzzle_side.cpp  spin_puzzle_side.h
src/pybind11/: add.cpp  puzzle.cpp
src/widgets/: spin_puzzle_config_widget.cpp  spin_puzzle_config_widget.h  spin_puzzle_filesystems.cpp  spin_puzzle_filesystems.h  spin_puzzle_history_widget.cpp  spin_puzzle_history_widget.h  spin_puzzle_replay_widget.cpp  spin_puzzle_replay_widget.h  spin_puzzle_widget.cpp  spin_puzzle_widget.h  spin_puzzle_window.cpp  spin_puzzle_window.h
tests/: t_definition.cpp  t_marbles.cpp  t_puzzle_cipher.cpp  t_puzzle_configuration.cpp  t_puzzle_game.cpp  t_puzzle_metric.cpp  t_puzzle_records.cpp  t_puzzle_side.cpp  t_recorder.cpp  test_marbles.py  test_puzzle_side.py
